tests/cases/compiler/primitiveTypeAsInterfaceName/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.7.3/tests/cases/compiler/primitiveTypeAsInterfaceName.ts`, Apache-2.0 License

interface number {}
//~^ ERROR: Interface name cannot be 'number'.